fixes for the gap

--- a/src/shared/modules/header/header.component.scss
+++ b/src/shared/modules/header/header.component.scss
@@ -1,5 +1,7 @@
 :host {
   width: 100vw;
+  margin-bottom: 12px;
+  display: block;
 }
 .header-wrapper {
   height: 115px;
